--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 	<h1 align="center">My first Application</h1>
+	<h2>Name - Roshan Sanjay Sawant</h2>
+	<div align="center">
+		<img src="https://e0.pxfuel.com/wallpapers/129/329/desktop-wallpaper-industrial-area-industry.jpg">
+	</div>
 
 </body>
 </html>
